--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
             color: #1e2935;
             text-align: center;
             margin-bottom: 30px;
+            font-size: 20px;
         }
         
         h2 {
